# study_langchain

./: .pre-commit-config.yaml  LICENSE  README.md  README_METODOLOGIA.md  README_openai_client.md  ai_agent_review_azimov.py  config.env.example  openai_client.py  organize_files.py  pyproject.toml  requirements-compiled.txt  requirements-dev.txt  requirements.txt  run_roteiro.py
Aplicações de IA com LangChain - Asimov Academy/scripts/: 08_runnables.ipynb  09_roteamento.ipynb
LCEL_small_projects/basic_animal_description/: main.py
LCEL_small_projects/country_capital_proj/: config.py
docs/: analise_profissional_parsers.md  chain_learning_guide.md  chain_recommendations_summary.md  chain_unity_basic.html  langraGraph_exercicio_proposto_agente_de_viagens.md  multi_step_workflow_solution.md  plano_de_estudos_langchain.md  possible_projects.txt
examples/: SUMMARY.md  advanced_output_parsers.py  final_output_parsers_demo.py
experiments/: README.md
experiments/2025-09-07_chain_pais_capital_curiosidade/: chain_pais_capital_curiosidade_final.py  chain_pais_capital_curiosidade_v3.py  chain_pais_capital_curiosidade_v5.py
experiments/2025-09-07_exemplo_simples_paralelo/: exemplo_simples_paralelo.py
experiments/2025-09-07_projetinho_alura_chains/: projetinho_alura_chains_v3.py
experiments/2025-09-07_runnable_passthrough_assign_demo/: runnable_passthrough_assign_demo.py
learning/: README.md
learning/pydantic/: lecture_pydantic_4.ipynb  lesson_2.ipynb  lesson_3.ipynb  lesson_4.ipynb  lesson_5.ipynb  pydantic_tool_calling_openai.ipynb
notebooks/: L2_demo_01_langchain_101.ipynb  L2_starter_exercise_02_multi_step_workflow.ipynb  ai_agents_langgraph_lesson.ipynb  analise_profissional_parsers.md  chain_unity_basic.ipynb  chain_w_runnables_training.ipynb  correcao_codigo.py  estudo_montar_roteiro_viagem_FINAL.ipynb  estudo_montar_roteiro_viagem_REVISADO.ipynb  exercicios_praticos.py  garantir_pydantic.py  improved_pydantic_example.py  langchain_book.ipynb  langchain_chaining_exercises.ipynb  langchain_chains_demos_azimov.ipynb  langchain_chatbot.ipynb  langchain_review_exercises.ipynb  langchain_tutorial.ipynb  rag_exemplo_completo.ipynb  rag_exemplo_simples.py  resumo_garantir_pydantic.md  runnable_passthrough_assign_demo.py  runnables_practice_chains.ipynb
notebooks/Experimentos_langchain/: L2_demo_05_RAG.ipynb  L2_solution_exercise_02_multi_step_workflow.ipynb  L3_demo_01_langgraph_workflow.ipynb  L3_demo_02_schemas.ipynb  L3_demo_03_reducers.ipynb  L3_demo_04_config.ipynb  L3_starter_exercise_01_router.ipynb  chain_unity_basic.ipynb  chain_w_runnables_training.ipynb  estudo_montar_roteiro_viagem_FINAL.ipynb  estudo_montar_roteiro_viagem_REVISADO.ipynb  garantir_pydantic.py  langGraph_estudo_part1.ipynb  langGraph_langchain_estudo_parte1.ipynb  langchain_book.ipynb  langchain_chaining_exercises.ipynb  langchain_chatbot.ipynb  langchain_review_exercises.ipynb  langchain_tutorial.ipynb  lg_config_study.ipynb  lg_experiment_multiple_inputs.ipynb  lg_practice_router.ipynb  lg_reducer_practice.ipynb  managing_state_langGraph_lecture.ipynb  processing_aplication.ipynb  review_chain.ipynb  runnables_practice_chains.ipynb  start_langgraph.ipynb
projects/: README.md
projects/agentstate_langgraph_linear_flow/: question_assistant.py  simple_debugger_practice.py
projects/assistent_questions_project/: README.md
projects/examples/: README.md
projects/lg_router_exercise/: README.md  __main__.py  graph_builder.py  main.py  nodes.py  settings.py  state.py
projects/movie_project/: README_movie_project.md  main.py
projects/movie_project_rag/: gerar_catalogo.py  main.py
roteiro_viagem/: DOCUMENTACAO_DIDATICA.md  __init__.py  config.py  main.py
roteiro_viagem/chains/: chain_destino.py  chain_passeios.py  chain_restaurante.py
roteiro_viagem/utils/: logger_setup.py
roteiro_viagem_v2/: README.md  main.py  requirements.txt
roteiro_viagem_v2/chains/: chain_destino.py  chain_passeios.py  chain_restaurante.py  orchestrador.py
roteiro_viagem_v2/config/: config.py  exemplo_documentacao.py  exemplo_uso.py
roteiro_viagem_v2/docs/: docs_style_guide.md
roteiro_viagem_v2/tests/: test_config.py
roteiro_viagem_v2/utils/: llm_setup.py
src/: L2_solution_exercise_02_multi_step_workflow.ipynb  analisador_de_sentimento.py  chain_2_steps_study.py  chain_evolution_examples.py  chain_feedback_product.py  chain_multistep_exemplo1.py  chain_multistep_study.py  chain_pais_capital_curiosidade.py  chain_pais_capital_curiosidade_corrigido.py  chain_pais_capital_curiosidade_final.py  chain_pais_capital_curiosidade_v3.py  chain_pais_capital_curiosidade_v5.py  chain_template.py  chains_composition.py  chatbot_class_example.py  chatbot_core.py  comparacao_paralelo_vs_encadeado.py  correcao_celula_5.py  exemplo_runnable_parallel.py  exemplo_simples_paralelo.py  exercise_chain0.py  exercise_chain1.py  exercise_chain2.py  exercise_chain_ideias.py  few_shot_example.py  improved_pydantic_example.py  langchain_ex1.py  langchain_ex2.py  langchain_ex3.py  langchain_ex4.py  langchain_ex5.py  multi_step_workflow.py  multi_step_workflow_melhorado.py  openai_client.py  organize_files.py  projetinho_alura_chains_v2.py  projetinho_alura_chains_v3.py  projeto_alura_langchain.py  prototipo_notebook_lcel_2025.py  rag_exemplo_simples.py  (+4 more)
src/agent_ai_from_scratch/: main.py  tool.py
src/chain_roteiro_viagem/: chain_destino.py
src/examples/: final_output_parsers_demo.py  output_parsers_datetime_boolean.py  simple_output_parsers.py
src/roteiro_viagem/: EXERCICIOS_PRATICOS.md  README.md  __init__.py  config.py  main.py  run_roteiro.py
src/script_4_studies/: analisador_de_sentimento.py  chain_evolution_examples.py  chain_feedback_product.py  chain_multistep_exemplo1.py  chain_multistep_study.py  chain_pais_capital_curiosidade_corrigido.py  comparacao_paralelo_vs_encadeado.py  correcao_celula_5.py  correcao_codigo.py  exemplo_runnable_parallel.py  exercicios_praticos.py  exercise_chain1.py  langchain_ex3.py  langchain_ex4.py  multi_step_workflow_melhorado.py  openai_client.py  projetinho_alura_chains_v2.py  (+4 more)
(+97 files in other folders)
