[project]
name = "study-langchain"
version = "0.1.0"
description = "Estudos sobre langchain"
readme = "README.md"
authors = [{ name = "Fabio Lima", email = "lima.fisico@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain[openai]>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.68",
    "langchain-openai>=0.3.27",
    "langchain-postgres>=0.0.15",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.5.4",
    "openai>=1.93.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "langchain-chroma>=0.2.0",
    "beautifulsoup4>=4.12.2",
    "pypdf>=5.1.0",
    "psycopg[binary]>=3.2.4", # Updated to include [binary] extra
    "setuptools>=75.8.0",
    "langsmith>=0.3.2",
    "langgraph-checkpoint-sqlite>=2.0.3",
    "duckduckgo-search>=7.3.0",
    "langgraph-cli>=0.1.73",
    "grandalf>=0.8",
    "ruff>=0.12.4",
    "mypy>=1.17.1",
    "pydantic-settings>=2.10.1",
    "loguru>=0.7.3",
    "ruff-lsp>=0.0.62",
]
[project.optional-dependencies]
dev = ["ruff", "pyright", "pytest", "pytest-xdist"]
# ============================
# Lint e formatação (Ruff)
# ============================
[tool.ruff]
line-length = 88
target-version = "py313"
fix = true
show-fixes = true
indent-width = 4
exclude = ["venv", ".venv", "env", ".env", "node_modules", "__pycache__"]

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    "T201",     # Permite o uso de `print`
    "COM812",   # Permite não ter vírgula final
    "ANN101",   # Não exige anotação de tipo para `self` em métodos
    "D100",     # Não exige docstrings em todos os módulos
    "D104",     # Não exige docstrings em todos os pacotes públicos
    "D107",     # Não exige docstrings em `__init__`
]
# Para ser ainda mais moderno, você pode habilitar o preview:
preview = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
# Ensina ao Ruff qual é o pacote principal do seu projeto.
# Deve ser o mesmo nome da pasta dentro de 'src/'.
known-first-party = ["study_langchain"]


# ============================
# Tipagem (Pyright)
# ============================
[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
include = ["src", 'tests']
exclude = [
    "**/venv",
    "**/.venv",
    "**/env",
    "**/.env",
    "**/node_modules",
    "**/__pycache__",
]
venv = ".venv"
venvPath = "."
executionEnvironments = [{ root = "src" }]

# ============================
# Testes (Pytest)
# ============================
[tool.pytest.ini_options]
addopts = "-s --color=yes --tb=short"
# Adiciona 'src' ao path do Python durante os testes. Isso permite que
# os testes em `tests/` importem os módulos de `src/` sem erros.
pythonpath = ["src"]
testpaths = ["tests"]